03_infrastructure/ingress/external-access/dev/postgres-operator/ingressroute-patch-postgres.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: postgres
spec:
  routes:
    - match: Host(`postgres.127.0.0.1.xip.io`)
      kind: Rule
      services:
        - name: postgres-louketo-proxy
          port: 3000
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: postgres-tls
spec:
  routes:
    - match: Host(`postgres.127.0.0.1.xip.io`)
      kind: Rule
      services:
        - name: postgres-louketo-proxy
          port: 3000
